<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_drawer_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <!--主页内容-->
    <LinearLayout
        android:id="@+id/ll_content"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/config"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:text="@string/ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/text_ip"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="15dp"
                android:text="@string/server_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/port"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/remember"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_connect"
                android:text="@string/conn"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:elevation="16dp"
                android:theme="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:text="@string/operate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status"
                android:layout_marginTop="10dp"
                android:text="@string/conn_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/future"
                    android:inputType="number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/time_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

                <TextView
                    android:text="后"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/op_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

                <Button
                    android:id="@+id/btn_go"
                    android:text="@string/go"
                    android:theme="@style/CustomButton"
                    android:textColor="@color/white"
                    android:elevation="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/tips"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <!--菜单项-->
    <LinearLayout
        android:id="@+id/ll_drawer"
        android:orientation="vertical"
        android:layout_width="260dp"
        android:background="@color/white"
        android:layout_gravity="start"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lv_drawer"
            android:divider="@null"
            android:layout_width="260dp"
            android:layout_height="match_parent">
        </ListView>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
